--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@modelcontextprotocol/sdk": "^1.13.0",
     "@vercel/mcp-adapter": "^0.11.1",
+    "ai": "^4.3.16",
     "next": "15.3.4",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
