--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ai": "^4.3.16",
     "next": "15.3.4",
     "node-fetch": "^3.3.2",
+    "openai": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^5.5.6"
